Fix vertical spacing

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -43,6 +43,7 @@
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
+  padding-bottom: 2em;
 }
 
 .flexcol {
